# scriba_localization

./: CMakeLists.txt  README.md  package.xml
scriba_ekf/: CMakeLists.txt  package.xml  setup.py
scriba_ekf/config/: scriba_ekf_params.yaml
scriba_ekf/launch/: scriba_ekf.launch
scriba_ekf/nodes/: ekf_scriba_node.py
scriba_ekf/src/scriba_ekf/: ekf.py  process_localization.py  robot_model.py
scriba_localization/: CMakeLists.txt  package.xml
scriba_vision/: CMakeLists.txt  package.xml  setup.py
scriba_vision/cfg/: ScribaCam.cfg  ScribaVision.cfg
scriba_vision/config/: camera_param.yaml  front_camera.yaml  front_camera_params.yaml  localization_params.yaml
scriba_vision/launch/: camera_localization.launch  front_camera_localization.launch
scriba_vision/nodes/: scriba_camera_node.py
scriba_vision/src/scriba_vision/: cv_utils.py  exceptions.py  feature_matching.py  image_localization.py  localization_test.py  scriba_camera.py
