<?xml version="1.0"?>
<package format="2">
  <name>scriba_localization</name>
  <version>0.0.0</version>
  <description>The scriba_localization package</description>

  <maintainer email="robin@todo.todo">robin</maintainer>

  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/scriba_localization</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <buildtool_depend>catkin</buildtool_depend>


  <export>
   <metapackage />
  </export>
  
</package>
